Bazaar Release Notes
====================


.. contents:: List of Releases
   :depth: 1

In Development
##############

Compatibility Breaks
********************

* bzr no longer autodetects nested trees as 'tree-references'.  They
  must now be explicitly added tree references.  At the commandline, use
  join --reference instead of add.  (Aaron Bentley)

New Features
************

* New ``guess-renames`` command recognizes renames after they occur.
  (Aaron Bentley)

* ``bzr log`` now supports filtering of multiple files and directories
  and will show changes that touch any of them. Furthermore,
  directory filtering now shows the changes to any children of that
  directory, not just the directory object itself.
  (Ian Clatworthy, #97715)

* ``bzr shelve`` can now apply changes without storing anything on the
  shelf, via the new --destroy option.  (Aaron Bentley)

* ``bzr send`` now accepts --body to specify an initial message body.
  (Aaron bentley)

* ``bzr xxx --usage`` where xxx is a command now shows a usage
  message and the options without the descriptive help sections
  (like Description and Examples). A message is also given
  explaining how to see the complete help, i.e. ``bzr help xxx``.
  (Ian Clatworthy)

* Content filters can now be used to provide custom conversion
  between the canonical format of content (i.e. as stored) and
  the convenience format of content (i.e. as created in working
  trees). See ``bzr help content-filters`` for further details.
  (Ian Clatworthy, Alexander Belchenko)

Improvements
************

* A new format name alias ``default-rich-root`` has been added and
  points at the closest relative of the default format that supports 
  rich roots. (Jelmer Vernooij, #338061)

* Branching from a stacked branch using ``bzr*://`` will now stream
  the data when the target repository does not need topological
  ordering, reducing round trips and network overhead. This uses the